--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
     </div>
 
     <div class="credit">
-      Dibuat oleh Nirmalasari Rodito Sulnas - KKN-T 01 ITH
+      Dibuat oleh KKN-T 01 ITH
     </div>
 
     <footer>
