--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
     </div>
 
     <a href="form.html" class="complaint-button">
-      Ingin melakukan pengaduan? Klik disini <i class="fas fa-arrow-right"></i>
+      Ingin melakukan pengaduan TANTRIB? Klik disini <i class="fas fa-arrow-right"></i>
     </a>
 
     <div class="note">
