--- a/index.html
+++ b/index.html
@@ -410,8 +410,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Pelayanan Administrasi Kelurahan</h1>
-    <p class="intro-text">Informasi lengkap tentang jenis pelayanan dan persyaratan dokumen yang diperlukan untuk pengurusan administrasi di kelurahan Ujung Bulu.</p>
+    <h1>Persyaratan Penyuratan Kel.Ujung Bulu</h1>
+    <p class="intro-text">Informasi lengkap tentang jenis pelayanan dan persyaratan dokumen yang diperlukan untuk pengurusan administrasi di kelurahan Ujung B.</p>
 
     <div class="service-card">
       <h2><i class="fas fa-file-contract"></i> Surat Keterangan Ahli Waris</h2>
@@ -461,10 +461,6 @@
         <li>Bukti Pelunasan PBB Tahun berjalan (SPPT/STTS) Terbaru</li>
       </ul>
     </div>
-
-    <a href="form.html" class="complaint-button">
-      Ingin melakukan pengaduan TANTRIB? Klik disini <i class="fas fa-arrow-right"></i>
-    </a>
 
     <div class="note">
       <div class="note-icon">
