--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 <body>
   <div class="container">
     <h1>Persyaratan Penyuratan Kel.Ujung Bulu</h1>
-    <p class="intro-text">Informasi lengkap tentang jenis pelayanan dan persyaratan dokumen yang diperlukan untuk pengurusan administrasi di kelurahan Ujung B.</p>
+    <p class="intro-text">Informasi lengkap tentang jenis pelayanan dan persyaratan dokumen yang diperlukan untuk pengurusan administrasi di kelurahan Ujung Bulu.</p>
 
     <div class="service-card">
       <h2><i class="fas fa-file-contract"></i> Surat Keterangan Ahli Waris</h2>
